<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_200"
    tools:context=".care_guidance">

    <!-- Top Navigation -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigationBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@null"
            android:padding="8dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/charcoal" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="100dp"
            android:text="@string/care"
            android:textColor="@color/blue_900"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Divider -->
    <View
        android:id="@+id/Divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigationBar" />

    <TextView
        android:id="@+id/Head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/heading6"
        android:textColor="@color/blue_900"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Divider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardHelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/common_box2"
        android:backgroundTint="@color/white"
        android:minHeight="98dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Head">

        <ImageView
            android:id="@+id/call"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:src="@drawable/call"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#037520" />

        <TextView
            android:id="@+id/head1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/help"
            android:textColor="@color/blue_900"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/call"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sub1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/advice"
            android:textColor="@color/charcoal"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/call"
            app:layout_constraintTop_toBottomOf="@id/head1" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:importantForAccessibility="no"
            android:src="@drawable/chevron_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/gray_secondary" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dailyReminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/common_box2"
        android:backgroundTint="@color/white"
        android:minHeight="98dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHelp">

        <ImageView
            android:id="@+id/iconReminder"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@null"
            android:src="@drawable/info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#001A8E" />

        <TextView
            android:id="@+id/head2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/Symptoms_info"
            android:textColor="@color/blue_900"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iconReminder"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:importantForAccessibility="no"
            android:src="@drawable/chevron_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181"
            app:tint="@color/gray_secondary" />

        <TextView
            android:id="@+id/sub2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/tipTag"
            android:textColor="@color/charcoal"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/iconReminder"
            app:layout_constraintTop_toBottomOf="@+id/head2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/Head2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/subHeading"
        android:textColor="@color/blue_900"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyReminder" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/common_box2"
        android:backgroundTint="#EBCACA"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Head2">

        <!-- Item 1 Icon -->
        <ImageView
            android:id="@+id/icon1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@null"
            android:src="@drawable/error"
            app:layout_constraintBottom_toTopOf="@+id/icon2"
            app:layout_constraintEnd_toStartOf="@+id/text1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#620101" />

        <!-- Item 1 Text -->
        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:justificationMode="inter_word"
            android:text="@string/warn1"
            android:textColor="#B71C1C"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon1"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Item 2 Icon -->

        <!-- Item 2 Text -->
        <ImageView
            android:id="@+id/icon2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@null"
            android:src="@drawable/error"
            app:layout_constraintBottom_toTopOf="@+id/icon3"
            app:layout_constraintEnd_toStartOf="@+id/text2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon1"
            app:tint="#620101" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:justificationMode="inter_word"
            android:text="@string/warn2"
            android:textColor="#B71C1C"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon2"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <!-- Item 3 Icon -->
        <ImageView
            android:id="@+id/icon3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@null"
            android:src="@drawable/error"
            app:layout_constraintBottom_toTopOf="@+id/icon4"
            app:layout_constraintEnd_toStartOf="@+id/text3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon2"
            app:tint="#620101" />

        <!-- Item 3 Text -->
        <TextView
            android:id="@+id/text3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:justificationMode="inter_word"
            android:text="@string/warn3"
            android:textColor="#B71C1C"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon3"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <!-- Item 4 Icon -->
        <ImageView
            android:id="@+id/icon4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@null"
            android:src="@drawable/error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon3"
            app:tint="#620101" />

        <!-- Item 4 Text -->
        <TextView
            android:id="@+id/text4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:justificationMode="inter_word"
            android:text="@string/warn4"
            android:textColor="#B71C1C"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon4"
            app:layout_constraintTop_toBottomOf="@+id/text3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>